--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--LINK CSS-->
+    <link rel="stylesheet" href="styles/index.css">
+    <!--FONTE-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <!--JAVASCRIPT-->
+    <script src="javascript/index.mjs"></script>
     <title>Pizaria</title>
 </head>
-<body>
-    <h1>bem vindo</h1>
+<body onload="mensagem()">
+    <h1 id="msg">Olá</h1>
+   <div id="div-login">
+       <h1>Login</h1>
+
+       <form>
+
+       <div id="div-input">
+       <input type="text" name="email" id="input-emal" required>
+       <label>E-mail</label>
+       </div>
+
+       <div id="div-input">
+        <input type="password" name="senha" id="input-senha" required>
+        <label>Senha</label>
+       </div>
+    </form>
+    <p>Esqueceu a senha? <a href="#">redefinir</a></p>
+    <button>Login</button>
+   </div>
+   
 </body>
 </html>
