--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!--JAVASCRIPT-->
     <script src="javascript/index.mjs"></script>
-    <title>Pizaria</title>
+    <title>Login</title>
 </head>
 <body onload="mensagem()">
     <h1 id="msg">Olá</h1>
